iceberg/iceberg-handler/src/test/queries/negative/show_iceberg_tables.q
SHOW extended TABLES where `format`="iceberg";